force-app/main/default/objects/Billing_plan__c/Billing_plan__c.object-meta.xml
<CustomObject>
    <label>Plan de pago</label>
    <nameField>
        <label>Plan de pago Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planes de pago</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>