force-app/main/default/objects/Billing_plan__c/fields/Billing_plan_period_type__c.field-meta.xml
<CustomField>
    <fullName>Billing_plan_period_type__c</fullName>
    <label>Tipo de periodo de facturación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>