force-app/main/default/objects/Billing_plan__c/fields/billing_plan_price__c.field-meta.xml
<CustomField>
    <fullName>billing_plan_price__c</fullName>
    <label>Precio del pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>