force-app/main/default/objects/Billing_plan__c/fields/Cicles__c.field-meta.xml
<CustomField>
    <fullName>Cicles__c</fullName>
    <label>Ciclos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>