force-app/main/default/objects/Billing_plan__c/fields/Grace_period__c.field-meta.xml
<CustomField>
    <fullName>Grace_period__c</fullName>
    <label>Periodo de gracias (días)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>