force-app/main/default/objects/Billing_plan__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Unidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>